--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my_solutions",
   "version": "0.1.0",
+  "homepage": "https://andorey.github.io/my_counter2/",
   "private": true,
   "dependencies": {
     "react": "^16.11.0",
@@ -29,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
